istio/06/details-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: details
  namespace: eylab
spec:
  host: details.eylab.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
