istio/06/details-err-500-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: eylab
spec:
  hosts:
  - details.eylab.svc.cluster.local
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    match:
    - headers:
        end-user:
          exact: jason

    route:
    - destination:
        host: details.eylab.svc.cluster.local
        subset: v1
  - route:
      - destination:
          host: details.eylab.svc.cluster.local
          subset: v2
