istio/06/details-fault-injection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: eylab
spec:
  hosts:
  - details.eylab.svc.cluster.local
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    fault:
      delay:
        percentage:
          value: 10.0
        fixedDelay: 7s
    route:
    - destination:
        host: details.eylab.svc.cluster.local
        subset: v1
  - route:
      - destination:
          host: details.eylab.svc.cluster.local
          subset: v2
